# web_template

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
etc/docker/mysql_db/: my.cnf
etc/docker/nginx/: default.conf
etc/docker/ui/: Dockerfile
etc/docker/web/: Dockerfile
etc/env/: test
etc/scripts/: export_schema.py  server_setup.sh  test.sh
server/: .pylintrc  docker-compose.yml  pyproject.toml
server/alembic/: alembic.ini  env.py
server/alembic/versions/: 02eef1d3c477_init.py  457907d0ffe9_init.py  7bc9df1dccb9_.py
server/app/: __init__.py  deps.py  main.py  templates.py
server/app/api/: urls.py
server/app/api/endpoints/: common.py  item.py  user.py
server/app/core/: __init__.py  security.py  settings.py
server/app/db/: __init__.py  base_class.py  base_model.py  crud.py  deps.py  file.py  manager.py  session.py
server/app/models/: __init__.py  item.py  token.py  user.py
server/app/schemas/: __init__.py  base.py  msg.py  token.py  user.py
server/app/templates/emails/: new_account.html
server/app/utils/: __init__.py  mails.py  signing.py  templates.py
server/etc/: api_schema.yaml
server/etc/docker/mysql_db/: Dockerfile
server/etc/docker/nginx/: Dockerfile  my_project.conf
server/etc/docker/openapitools/: Dockerfile  config-typescript-axios.yaml
server/etc/docker/web/: Dockerfile
server/etc/scripts/: test.sh
server/tests/: conftest.py
server/tests/api/endpoints/: test_common.py  test_item.py  test_user.py
server/tests/fixtures/: __init__.py  client.py  smtp_server.py  user.py
ui/: package.json
