[project]
name = "app"
version = "0.0.0"
dependencies = [
    "fastapi",
    "passlib",
    "python-jose",
    "python-multipart",
    "pydantic",
    "pydantic[dotenv]",
    "pydantic[email]",
    "pyyaml",
    "sqlalchemy",
    "sqlalchemy[asyncio]",
    # "aiosqlite",
    # "asyncpg",
    "asyncmy", "mysqlclient", "cryptography",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "aiosqlite",
    "alembic",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mypy",
    "pytest-pylint",
    "sqlalchemy[mypy]",
    "types-python-jose",
    "types-passlib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = "venv"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
# disallow_untyped_defs = true
# disallow_untyped_calls = true
# warn_unused_ignores = true
# warn_unreachable = true
strict = true

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = [
    # "--pylint",
    "--mypy",
    "--cov=app", "--cov-report=xml", "--no-cov-on-fail",
    # "-k", "test_testname",
    # "-k", "test_use_token",
    "-r", "A",
    # "-vv",
    # "--showlocals",
]
testpaths = [
    "tests",
    "app",
]
filterwarnings = [
    "ignore::DeprecationWarning:pylint*",
    "ignore::DeprecationWarning:pytest_pylint*",
]
